[gd_scene load_steps=7 format=3 uid="uid://c8xj2qk5kxe7p"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/utils/hitbox.gd" id="2_hitbox"]
[ext_resource type="Script" path="res://scripts/utils/state_machine.gd" id="3_statemachine"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(2, 1, 2)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="Hitbox" type="Area3D" parent="." groups=["player_hitbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
collision_layer = 8
collision_mask = 4
monitorable = false
script = ExtResource("2_hitbox")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("BoxShape3D_1")

[node name="BlinkTargetIndicator" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="BlinkTargetIndicator"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_statemachine")
initial_state = "idle"
